# llm-based-cluster-validation

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Snakefile  demo.ipynb  pyproject.toml
.claude/skills/dspy-build/: SKILL.md
.claude/skills/dspy-deploy/: SKILL.md
.claude/skills/dspy-evaluate/: SKILL.md
.claude/skills/dspy-finetune/: SKILL.md
.claude/skills/dspy-optimize/: SKILL.md
cluster_validator/: __init__.py  config.py  data.py  metrics.py  module.py
config/: dspy_config.yaml  pipeline_config.yaml
pipeline/: build_dataset.py  deploy_mlflow.py  evaluate.py  optimize.py  optimize_finetune.py  optimize_gepa.py
scripts/: sglang_manager.py
